--- a/src/scss/products-block.scss
+++ b/src/scss/products-block.scss
@@ -57,18 +57,18 @@
 
     &__body {
         display: grid;
-        grid-template-columns: repeat(4, minmax(280px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
         gap: rem(20);
-        @media (max-width: 1242px) {
+        /*  @media (max-width: 1242px) {
             grid-template-columns: repeat(3, minmax(280px, 1fr));
         } 
         @media (max-width: 910px) {
             grid-template-columns: repeat(2, minmax(280px, 1fr));
-        }  
+        }  */ 
         @media (max-width: 620px) {
             justify-content: center;
             grid-template-columns: repeat(1, minmax(280px, 0.7fr));
-        } 
+        }  
         
 
     }
