added page of product

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -103,7 +103,7 @@ body._lock {
 
 
 @import "catalog.scss";
-
+@import "product.scss";
 
 /* ============================================ */
 .swiper-pagination-bullet {
