--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,5 +1,3 @@
-
-
 .header {
 
     // .header__body
@@ -18,7 +16,7 @@
 
             z-index: 30;
             display: block;
-            position: fixed;
+            position: absolute;
             width: 30px;
             height: 18px;
             cursor: pointer;
@@ -83,6 +81,7 @@
 
 /* =========================================== */
 .top-header {
+    position: relative;
 
     // .top-header__container
     &__container {
@@ -191,12 +190,7 @@
     }
 
     // .actions-top-header__search
-    &__search {
-        @media (max-width: $mobile) {
-            display: none;
-        }
-
-    }
+    &__search {}
 
     // .actions-top-header__eye
 
@@ -204,6 +198,9 @@
         width: rem(48);
         height: rem(48);
 
+        @media (max-width: $mobile) {
+            display: none;
+        }
     }
 
     // .actions-top-header__like
@@ -370,7 +367,7 @@
             // background-color: rgba(0, 3, 6, 0.95);
             overflow: auto;
             transition: left 0.3s ease 0s;
-           
+
 
 
         }
@@ -590,4 +587,44 @@
     }
 
 }
+
+.serch-input {
+    display: none;
+    position: absolute;
+    right: 10%;
+    bottom: -40%;
+    z-index: 10;
+    background-color: #fff;
+    color: #495057;
+    border: 1px solid #eaeaea;
+    border-radius: 4px;
+    font-size: rem(20);
+    line-height: rem(32);
+
+
+    @media (max-width: $mobileSmall) {
+        right: 34%;
+        bottom: 16%;
+    }
+
+    &__btn {
+        padding-left: 20px;
+        // width: 40%;
+        @include adaptiveValue('width', 385, 160);
+    }
+}
+
+.top-header .active-search {
+    display: block;
+
+}
+
+.actions-top-header .search-active {
+    background-image: url('@img/svgicons/close.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    height: rem(36);
+}
+
+
 
